OST-199 fix layout breakage

--- a/server/static/survey/assets/css/dash-oceanspaces.scss
+++ b/server/static/survey/assets/css/dash-oceanspaces.scss
@@ -27,9 +27,9 @@ $vertical-gutter:15px;
 
 
 .container-padding {
-    padding-top: 30px;
-    padding-bottom: 30px;
-    padding-left:30px;
+    padding: 30px 15px;
+    margin-left: 47.5px;
+    // margin-right: 47.5px;
 }
 
 
@@ -80,6 +80,8 @@ h1, h2, .page-blog .field-static-banner-caption, .page-contact .pane-contact .pa
 .main-content {
     margin-left:4px;
     .row{
+        padding-top: 40px;
+        padding-left: 47.5px;
         background-color:white;
     }
     color: #666666;
