--- a/server/static/survey/assets/css/ost-dash.css
+++ b/server/static/survey/assets/css/ost-dash.css
@@ -5,6 +5,9 @@ DO NOT EDIT THE .CSS VERSION OF THIS FILE. Instead run
 to build it. 
 
 */
+html {
+  min-width: 840px; }
+
 #topnav {
   background: #005072;
   margin-top: 0; }
@@ -26,6 +29,16 @@ img.welcome-small {
 
 .dashboard {
   margin: 0; }
+  .dashboard .main {
+    margin-left: 275px; }
+
+.row {
+  margin-left: 0;
+  margin-right: 0; }
+
+#sidenav {
+  width: 275px;
+  position: absolute; }
 
 .dash-map-ost {
   height: 500px; }
@@ -97,9 +110,8 @@ These styles are taken from oceanspaces.org and are used on the dash board.
 
 */
 .container-padding {
-  padding-top: 30px;
-  padding-bottom: 30px;
-  padding-left: 30px; }
+  padding: 30px 15px;
+  margin-left: 47.5px; }
 
 header {
   border-bottom: 1px solid #CCCCCC;
@@ -138,6 +150,8 @@ h1, h2, .page-blog .field-static-banner-caption, .page-contact .pane-contact .pa
   color: #666666;
   font-size: 18px; }
   .main-content .row {
+    padding-top: 40px;
+    padding-left: 47.5px;
     background-color: white; }
 
 .user-menu ul.dropdown-menu {
@@ -247,8 +261,6 @@ tr.respondent:hover {
 End Respondent Table Styles
 ******************************************************/
 #sidenav {
-  width: 275px;
-  float: left;
   color: white;
   text-align: center;
   border-right: 1px solid #bbb;
@@ -272,23 +284,21 @@ End Respondent Table Styles
   #sidenav .box h1, #sidenav .box p {
     color: #E6E8E9; }
 
-#side_total {
-  background: #004C72; }
-  #side_total h1 {
-    font-size: 4em;
-    margin-top: 10px; }
-
 .stats {
   border-bottom: 1px solid #D6D6D6; }
+  .stats h1 {
+    margin-top: 10px; }
+  .stats #side_total {
+    background: #004C72; }
+    .stats #side_total h1 {
+      font-size: 4em; }
+  .stats #side_completed {
+    background: #C24118; }
+  .stats #side_started {
+    background: #70AFB6; }
 
 .row .box {
   padding-bottom: 10px; }
-
-#side_completed {
-  background: #C24118; }
-
-#side_started {
-  background: #70AFB6; }
 
 .sidebar_nav {
   background-color: #FFF;
