--- a/server/static/survey/assets/css/side-nav.scss
+++ b/server/static/survey/assets/css/side-nav.scss
@@ -1,6 +1,4 @@
 #sidenav {
-    width:275px;
-    float:left;
     color: white;
     text-align: center;
     border-right: 1px solid #bbb;
